# data-platform

./: .gitignore  LICENSE  README.md
.github/workflows/: README.md  airflow-ci.yml  backup-metadata.yml  dbt-ci.yml  deploy-prod.yml  deploy-qa.yml  publish-images.yml  refresh-dbt-docs.yml  scripts-ci.yml
airflow/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  validate_config.py  validate_dags.py
airflow/dags/: _alerting.py  _wremotely.py  etl__personal_finance.py  etl__wremotely.py  maintenance__wremotely_lifecycle.py  publish__wremotely_serving.py  repair__wremotely_job_urls.py  wremotely.md
assets/: README.md
assets/diagrams/: github-actions-flow.excalidraw  overview.excalidraw
dbt/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
dbt/data_warehouse/: README.md  dbt_project.yml  profiles.yml.example
dbt/data_warehouse/macros/: generate_schema_name.sql  relation_has_columns.sql
deploy/: README.md  env.example  images.env.example
metabase/: .env.example  README.md  docker-compose.yml
scripts/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  validate_config.py
scripts/pipelines/: personal_finance.md
scripts/schemas/: personal_finance__accounts.json  personal_finance__paid_for_others.json  personal_finance__transactions.json  personal_finance__transfers.json
scripts/schemas/personal_finance/: pending_transactions.json
scripts/src/: personal_finance.py  publication_signal.py
scripts/tests/: test_personal_finance.py  test_publication_signal.py
(+80 files in other folders)
