[project]
name = "data-platform-scripts"
version = "0.1.0"
description = "Extract/load commands for the data platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-auth>=2.38.0",
    "google-cloud-bigquery>=3.30.0",
    "google-cloud-storage>=2.19.0",
    "gspread>=6.1.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
